--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,10 +7,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-    <RelativeLayout
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:text="DATA PRODUK"
+        android:textStyle="bold"
+        android:layout_margin="8dp"
+        android:gravity="center_horizontal"
+        android:id="@+id/produkTxt"
+        android:layout_alignParentTop="true"/>
+
+    <ListView
+        android:layout_below="@+id/produkTxt"
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/queryLayout"/>
+
+
+
+
+    <RelativeLayout
+        android:id="@+id/queryLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:layout_margin="8dp"
+        android:background="@drawable/customborder"
+        android:layout_alignParentBottom="true">
         <TextView
             android:id="@+id/urutTxt"
             android:layout_width="match_parent"
@@ -83,12 +107,4 @@
 
 
 
-
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-
-
-</LinearLayout>
+</RelativeLayout>
