--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,6 +4,12 @@
     <item
         android:id="@+id/action_sync"
         android:icon="@drawable/ic_sync"
-        android:title="Search"
+        android:title="Sync"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_logout"
+        android:icon="@drawable/ic_exit"
+        android:title="Logout"
         app:showAsAction="always" />
 </menu>
